# second-brain

./: .gitignore  Cargo.toml  README.md  Rocket.toml  index.html
.github/workflows/: build-deploy.yml
src/: auth.rs  main.rs  routes.rs  thought.rs  vars.rs
static/: manifest.json
