[package]
name = "second-brain"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv_codegen = "0.15.0"
maud = { version = "0.27.0", features = ["rocket"] }
reqwest = { version = "0.12.19", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_oauth2 = { version = "0.5.0" }
serde = { version = "1.0.219", features = ["derive"] }
